--- a/src/components/ActionsMenu/Item/ActionsMenuItem.st.css
+++ b/src/components/ActionsMenu/Item/ActionsMenuItem.st.css
@@ -25,9 +25,7 @@
 .root {
     -st-states: disabled, mobile;
     padding: 8px 24px;
-    display: flex;
     cursor: pointer;
-    align-items: center;
     width: calc(100% + 2px);
     position: relative;
     left: -1px;
@@ -39,8 +37,28 @@
 }
 
 .container {
+    display: inline-flex;
+    align-items: center;
+}
+
+.iconContainer {
     display: flex;
-    flex: 1;
+    align-self: stretch;
+}
+
+.icon {
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: start;
+}
+
+.iconContainer::after {
+    content: '';
+    width: 12px;
+    height: 100%;
 }
 
 .root:disabled {
@@ -90,10 +108,4 @@
 
 .textContainer {
     display: flex;
-}
-
-.textContainer::before {
-    content: '';
-    width: 12px;
-    height: 100%;
 }
